# n2os-smb-client

./: .gitignore  .gitmodules  .markdownlint.json  .mega-linter.yml  CMakeLists.txt  COPYING  Dockerfile.linux  FindGssApi.cmake  FindKrb5.cmake  LICENSE  README.md  build.bsd.sh  build.linux.debug.sh  build.linux.sh  build.macos.debug.sh  krb5.conf  n2os-smb-client.c  readme.md  smb_krb5.yml  smb_nn_test.yml  smb_test_env.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ensure-sha-pinned-actions.yml  freebsd.yml  linux.yml  mega-linter.yml
include/: freebsd_fix.h
